cloud-infra-macros/tests/fails/message_retention_period_too_high.stderr
error: proc macro panicked
 --> tests/fails/message_retention_period_too_high.rs:4:18
  |
4 |     let period = message_retention_period!(1500000);
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: value should be at most 1209600
